# greataped/app/docs/swagger.yaml
@@ -62,7 +62,7 @@ definitions:
         type: integer
       private_profile:
         type: boolean
-      publicKey:
+      public_key:
         type: string
       username:
         type: string
@@ -89,11 +89,31 @@ definitions:
 info:
   contact: {}
   description: GreatApe is a free audio and video social-media platform that can be
-    used via an app. GreatApe is a Fediverse technology that supports federation via
-    ActivityPub.
+    used via an app. It is a Fediverse technology that supports federation via ActivityPub.
   title: GreatApe API
   version: "1.0"
 paths:
+  /.well-known/webfinger:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - default: acct:user@domain.com
+        description: Resource
+        in: query
+        name: resource
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      tags:
+      - WebFinger
   /api/v1/login:
     post:
       consumes:
@@ -114,6 +134,26 @@ paths:
             $ref: '#/definitions/dto.LoginResponse'
       tags:
       - Authentication
+  /api/v1/profile:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.User'
+      tags:
+      - User
   /api/v1/signup:
     post:
       consumes:
@@ -154,4 +194,24 @@ paths:
             $ref: '#/definitions/dto.VerifyResponse'
       tags:
       - Authentication
+  /u/{username}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Username
+        in: path
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      tags:
+      - ActivityPub
 swagger: "2.0"
