# greataped/app/routes/user.go
@@ -8,6 +8,15 @@ import (
 	"server/route"
 )
 
+// User		godoc
+// @Tags	ActivityPub
+// @Accept	json
+// @Produce	json
+// @Param	username path string true "Username"
+// @Success	200 {object} map[string]interface{}
+// @Router	/u/{username} [get]
+func _() {}
+
 var User = route.New(contracts.HttpGet, "/u/:username", func(x contracts.IContext) error {
 	username := domain.Username(x.Request().Params("username"))
 	if username.IsEmpty() {
@@ -34,7 +43,7 @@ var User = route.New(contracts.HttpGet, "/u/:username", func(x contracts.IContex
 
 		str := x.StringUtil()
 		actor := createActor(user)
-		if x.Request().AcceptsActivityStream() {
+		if x.Request().AcceptsActivityStream() || x.Request().AcceptsJSON() {
 			return x.Activity(actor)
 		} else if config.ExternalClient() {
 			return x.Redirect(str.Format("%s://%s/u/%s", config.PROTOCOL, config.CLIENT_DOMAIN, user.Username))
