# greataped/app/routes/webfinger.go
@@ -8,6 +8,15 @@ import (
 	"server/route"
 )
 
+// WebFinger	godoc
+// @Tags		WebFinger
+// @Accept		json
+// @Produce		json
+// @Param		resource query string true "Resource" default(acct:user@domain.com)
+// @Success		200 {object} map[string]interface{}
+// @Router		/.well-known/webfinger [get]
+func _() {}
+
 var WebFinger = route.New(HttpGet, "/.well-known/webfinger", func(x IContext) error {
 	resource := x.Request().Query("resource")
 	if !x.StringUtil().Contains(resource, "acct:") {
